--- a/index.html
+++ b/index.html
@@ -1,224 +1,311 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./css/style.css">
-</head>
-<body>
-<header>
-    <a href="#">Furniutr.</a>
-    <ul>
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+  <body>
+    <header>
+      <a href="#">Furniutr.</a>
+      <ul>
         <li>
-            <a href="#">Home</a>
+          <a href="#">Home</a>
         </li>
-      <li>
-        <a href="#">About</a>
-      </li>
-      <li>
-        <a href="#">Collection</a>
-      </li>
-      <li>
-        <a href="#">Shop</a>
-      </li>
-    </ul>
-    <ul>
-        <li><button>
-            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="24" viewBox="0 0 20 24" fill="none">
-                <path
-                    d="M4 1.2001L1 5.4989V20.5447C1 21.1148 1.21071 21.6615 1.58579 22.0646C1.96086 22.4676 2.46957 22.6941 3 22.6941H17C17.5304 22.6941 18.0391 22.4676 18.4142 22.0646C18.7893 21.6615 19 21.1148 19 20.5447V5.4989L16 1.2001H4Z"
-                    stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                <path d="M1 5.4989H19" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                <path
-                    d="M14 9.7977C14 10.9378 13.5786 12.0312 12.8284 12.8374C12.0783 13.6436 11.0609 14.0965 10 14.0965C8.93913 14.0965 7.92172 13.6436 7.17157 12.8374C6.42143 12.0312 6 10.9378 6 9.7977"
-                    stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+        <li>
+          <a href="#">About</a>
+        </li>
+        <li>
+          <a href="#">Collection</a>
+        </li>
+        <li>
+          <a href="#">Shop</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <button>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="20"
+              height="24"
+              viewBox="0 0 20 24"
+              fill="none"
+            >
+              <path
+                d="M4 1.2001L1 5.4989V20.5447C1 21.1148 1.21071 21.6615 1.58579 22.0646C1.96086 22.4676 2.46957 22.6941 3 22.6941H17C17.5304 22.6941 18.0391 22.4676 18.4142 22.0646C18.7893 21.6615 19 21.1148 19 20.5447V5.4989L16 1.2001H4Z"
+                stroke="black"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+              <path
+                d="M1 5.4989H19"
+                stroke="black"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+              <path
+                d="M14 9.7977C14 10.9378 13.5786 12.0312 12.8284 12.8374C12.0783 13.6436 11.0609 14.0965 10 14.0965C8.93913 14.0965 7.92172 13.6436 7.17157 12.8374C6.42143 12.0312 6 10.9378 6 9.7977"
+                stroke="black"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
             </svg>
-        </button></li>
-        <li>
-            <button>
-                <svg xmlns="http://www.w3.org/2000/svg" width="27" height="30" viewBox="0 0 27 30" fill="none">
-                    <path
-                        d="M26.5862 27.0803L20.4654 20.5023C21.939 18.394 22.7345 15.8278 22.7318 13.191C22.7318 6.45568 17.633 0.976013 11.3659 0.976013C5.09879 0.976013 0 6.45568 0 13.191C0 19.9262 5.09879 25.4059 11.3659 25.4059C13.8195 25.4088 16.2073 24.5539 18.1691 22.9702L24.2898 29.5482C24.5997 29.8458 25.0038 30.0047 25.4192 29.9922C25.8346 29.9797 26.2298 29.7968 26.5237 29.481C26.8175 29.1652 26.9877 28.7405 26.9994 28.294C27.011 27.8476 26.8631 27.4133 26.5862 27.0803ZM3.24741 13.191C3.24741 11.4653 3.72355 9.77845 4.61562 8.34364C5.5077 6.90882 6.77563 5.79052 8.2591 5.13015C9.74256 4.46978 11.3749 4.29699 12.9498 4.63365C14.5246 4.9703 15.9712 5.80127 17.1066 7.02148C18.242 8.24169 19.0152 9.79633 19.3284 11.4888C19.6417 13.1813 19.4809 14.9356 18.8664 16.5299C18.252 18.1241 17.2114 19.4868 15.8763 20.4455C14.5412 21.4042 12.9716 21.9159 11.3659 21.9159C9.21355 21.9132 7.15007 20.993 5.62812 19.3574C4.10616 17.7217 3.24999 15.5041 3.24741 13.191Z"
-                        fill="black" />
-                </svg>
-            </button>
+          </button>
         </li>
-    </ul>
-</header>
-<section>
-    <div>
+        <li>
+          <button>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="27"
+              height="30"
+              viewBox="0 0 27 30"
+              fill="none"
+            >
+              <path
+                d="M26.5862 27.0803L20.4654 20.5023C21.939 18.394 22.7345 15.8278 22.7318 13.191C22.7318 6.45568 17.633 0.976013 11.3659 0.976013C5.09879 0.976013 0 6.45568 0 13.191C0 19.9262 5.09879 25.4059 11.3659 25.4059C13.8195 25.4088 16.2073 24.5539 18.1691 22.9702L24.2898 29.5482C24.5997 29.8458 25.0038 30.0047 25.4192 29.9922C25.8346 29.9797 26.2298 29.7968 26.5237 29.481C26.8175 29.1652 26.9877 28.7405 26.9994 28.294C27.011 27.8476 26.8631 27.4133 26.5862 27.0803ZM3.24741 13.191C3.24741 11.4653 3.72355 9.77845 4.61562 8.34364C5.5077 6.90882 6.77563 5.79052 8.2591 5.13015C9.74256 4.46978 11.3749 4.29699 12.9498 4.63365C14.5246 4.9703 15.9712 5.80127 17.1066 7.02148C18.242 8.24169 19.0152 9.79633 19.3284 11.4888C19.6417 13.1813 19.4809 14.9356 18.8664 16.5299C18.252 18.1241 17.2114 19.4868 15.8763 20.4455C14.5412 21.4042 12.9716 21.9159 11.3659 21.9159C9.21355 21.9132 7.15007 20.993 5.62812 19.3574C4.10616 17.7217 3.24999 15.5041 3.24741 13.191Z"
+                fill="black"
+              />
+            </svg>
+          </button>
+        </li>
+      </ul>
+    </header>
+    <section>
+      <div>
         <p>DECORATE HOME</p>
-        <h1>Feel your home
-        with a modern design
-        space</h1>
+        <h1>Feel your home with a modern design space</h1>
         <ul>
-            <li>
-                <button>Discover</button>
-            </li>
-            <li>
-                <button>Watch video</button>
-            </li>
+          <li>
+            <button>Discover</button>
+          </li>
+          <li>
+            <button>Watch video</button>
+          </li>
         </ul>
-    </div>
-    <div>
-        <img src="./images/image-min.jpg" alt="design">
-    </div>
-</section>
-<section>
-    <div><img src="./images/image-about.jpg" alt="about"></div>
-    <div>
+      </div>
+      <div>
+        <img src="./images/image-min.jpg" alt="design" />
+      </div>
+    </section>
+    <section>
+      <div><img src="./images/image-about.jpg" alt="about" /></div>
+      <div>
         <h2>About</h2>
         <p>Furniture</p>
-        <p>People have been using natural objects, such as tree
-        stumps, rocks and moss, as furniture since the
-        beginning of human civilisation.</p>
+        <p>
+          People have been using natural objects, such as tree stumps, rocks and
+          moss, as furniture since the beginning of human civilisation.
+        </p>
         <button>Read more</button>
-    </div>
-</section>
-<section>
-    <h2>More value from this</h2>
-    <p>Product</p>
-    <div>
-        <img src="./images/more.jpg" alt="more">
+      </div>
+    </section>
+    <section>
+      <h2>More value from this</h2>
+      <p>Product</p>
+      <div>
+        <img src="./images/more.jpg" alt="more" />
         <ul>
-            <li>
-                <svg xmlns="http://www.w3.org/2000/svg" width="51" height="51" viewBox="0 0 51 51" fill="none">
-                    <circle cx="25.5" cy="25.5" r="25.5" fill="#F7515C" fill-opacity="0.05" />
-                </svg>
-                <div>
-                    <h3>Full services</h3>
-                    <p>Provide the best service and very fast
-                    response.
-                     </p>
-                </div>
-            </li>
-             <li>
-                <svg xmlns="http://www.w3.org/2000/svg" width="51" height="51" viewBox="0 0 51 51" fill="none">
-                    <circle cx="25.5" cy="25.5" r="25.5" fill="#F7515C" fill-opacity="0.05" />
-                </svg>
-                <div>
-                    <h3>Long warranty.</h3>
-                    <p>With a 5-year warranty provided, providing
-                    satisfying service. </p>
-                </div>
-            </li>
-            <li>
-               <svg xmlns="http://www.w3.org/2000/svg" width="51" height="51" viewBox="0 0 51 51" fill="none">
-                   <circle cx="25.5" cy="25.5" r="25.5" fill="#F7515C" fill-opacity="0.05" />
-               </svg>
-               <div>
-                   <h3>Modern design</h3>
-                   <p>The room looks beautiful with a blend of
-        contemporary and attractive design.
-            </p>
-               </div>
-           </li>
+          <li>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="51"
+              height="51"
+              viewBox="0 0 51 51"
+              fill="none"
+            >
+              <circle
+                cx="25.5"
+                cy="25.5"
+                r="25.5"
+                fill="#F7515C"
+                fill-opacity="0.05"
+              />
+            </svg>
+            <div>
+              <h3>Full services</h3>
+              <p>Provide the best service and very fast response.</p>
+            </div>
+          </li>
+          <li>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="51"
+              height="51"
+              viewBox="0 0 51 51"
+              fill="none"
+            >
+              <circle
+                cx="25.5"
+                cy="25.5"
+                r="25.5"
+                fill="#F7515C"
+                fill-opacity="0.05"
+              />
+            </svg>
+            <div>
+              <h3>Long warranty.</h3>
+              <p>
+                With a 5-year warranty provided, providing satisfying service.
+              </p>
+            </div>
+          </li>
+          <li>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="51"
+              height="51"
+              viewBox="0 0 51 51"
+              fill="none"
+            >
+              <circle
+                cx="25.5"
+                cy="25.5"
+                r="25.5"
+                fill="#F7515C"
+                fill-opacity="0.05"
+              />
+            </svg>
+            <div>
+              <h3>Modern design</h3>
+              <p>
+                The room looks beautiful with a blend of contemporary and
+                attractive design.
+              </p>
+            </div>
+          </li>
         </ul>
-    </div>
-</section>
-<section>
-    <div>
+      </div>
+    </section>
+    <section>
+      <div>
         <div>
-            <h2>Our you have to buy</h2>
-            <p>Product</p>
+          <h2>Our you have to buy</h2>
+          <p>Product</p>
         </div>
         <ul>
-            <li>
-                <button><svg xmlns="http://www.w3.org/2000/svg" width="10" height="15" viewBox="0 0 10 15" fill="none">
-                    <path d="M9 1L2 7.5L9 14" stroke="#282A30" stroke-width="2" stroke-linecap="round" />
-                </svg>
+          <li>
+            <button>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="10"
+                height="15"
+                viewBox="0 0 10 15"
+                fill="none"
+              >
+                <path
+                  d="M9 1L2 7.5L9 14"
+                  stroke="#282A30"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                />
+              </svg>
             </button>
-            </li>
-            <li>
-                <button>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="10" height="15" viewBox="0 0 10 15" fill="none">
-                        <path d="M1 14L8 7.5L1 0.999999" stroke="#282A30" stroke-width="2" stroke-linecap="round" />
-                    </svg>
-                </button>
-            </li>
+          </li>
+          <li>
+            <button>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="10"
+                height="15"
+                viewBox="0 0 10 15"
+                fill="none"
+              >
+                <path
+                  d="M1 14L8 7.5L1 0.999999"
+                  stroke="#282A30"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                />
+              </svg>
+            </button>
+          </li>
         </ul>
-    </div>
-    <ul>
+      </div>
+      <ul>
         <li>
-            <img src="./images/Classic-lamp.jpg" alt="lamp">
-            <h4>Modern lamp study</h4>
-            <p>$258</p>
+          <img src="./images/Classic-lamp.jpg" alt="lamp" />
+          <h4>Modern lamp study</h4>
+          <p>$258</p>
         </li>
         <li>
-            <img src="./images/Chair.jpg" alt="Chair">
-            <h4>Modern chair study</h4>
-            <p>$135</p>
+          <img src="./images/Chair.jpg" alt="Chair" />
+          <h4>Modern chair study</h4>
+          <p>$135</p>
         </li>
         <li>
-            <img src="./images/Classic-lamp.jpg" alt="Classic-lamp">
-            <h4>Classic lamp</h4>
-            <p>$425</p>
+          <img src="./images/Classic-lamp.jpg" alt="Classic-lamp" />
+          <h4>Classic lamp</h4>
+          <p>$425</p>
         </li>
         <li>
-            <img src="./images/Clock.jpg" alt="Clock">
-            <h4>Clock cute</h4>
-            <p>$331</p>
+          <img src="./images/Clock.jpg" alt="Clock" />
+          <h4>Clock cute</h4>
+          <p>$331</p>
         </li>
-    </ul>
-</section>
-<section>
-    <div>
+      </ul>
+    </section>
+    <section>
+      <div>
         <p>Let’s</p>
         <h2>Try Now</h2>
         <button>Explore</button>
-    </div>
-    <div>
-        <img src="./images/try-now.jpg" alt="try-now">
-    </div>
-</section>
-<footer>
-    <ul>
+      </div>
+      <div>
+        <img src="./images/try-now.jpg" alt="try-now" />
+      </div>
+    </section>
+    <footer>
+      <ul>
         <li>
-            <h3>Get’s your discount</h3>
-            <p>Check now !</p>
+          <h3>Get’s your discount</h3>
+          <p>Check now !</p>
         </li>
         <li>
-            <h4>Our services</h4>
-            <ul>
-                <li><p>Collection</p></li>
-                <li>
-                    <p>How its work</p>
-                </li>
-                <li>
-                    <p>Estimats</p>
-                </li>
-            </ul>
+          <h4>Our services</h4>
+          <ul>
+            <li><p>Collection</p></li>
+            <li>
+              <p>How its work</p>
+            </li>
+            <li>
+              <p>Estimats</p>
+            </li>
+          </ul>
         </li>
         <li>
-            <h4>Company</h4>
-            <ul>
-                <li>
-                    <p>Terms of use</p>
-                </li>
-                <li>
-                    <p>Privacy policy</p>
-                </li>
-                <li>
-                    <p>Careers</p>
-                </li>
-            </ul>
+          <h4>Company</h4>
+          <ul>
+            <li>
+              <p>Terms of use</p>
+            </li>
+            <li>
+              <p>Privacy policy</p>
+            </li>
+            <li>
+              <p>Careers</p>
+            </li>
+          </ul>
         </li>
         <li>
-            <h4>Contact</h4>
-            <ul>
-                <li>
-                    <p>Furniutr2@furniture.com</p>
-                </li>
-                <li>
-                    <p>(888) 315-500</p>
-                </li>
-                <li>
-                    <p>St. VIllage, New York</p>
-                </li>
-            </ul>
+          <h4>Contact</h4>
+          <ul>
+            <li>
+              <p>Furniutr2@furniture.com</p>
+            </li>
+            <li>
+              <p>(888) 315-500</p>
+            </li>
+            <li>
+              <p>St. VIllage, New York</p>
+            </li>
+          </ul>
         </li>
-    </ul>
-</footer>
-</body>
+      </ul>
+    </footer>
+  </body>
 </html>
