--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
+    <!-- HEADER -->
     <header>
       <a href="#">Furniutr.</a>
       <ul>
@@ -75,6 +76,7 @@
         </li>
       </ul>
     </header>
+    <!-- HERO SECTION -->
     <section>
       <div>
         <p>DECORATE HOME</p>
@@ -92,6 +94,7 @@
         <img src="./images/image-min.jpg" alt="design" />
       </div>
     </section>
+    <!-- ABOUT SECTION -->
     <section>
       <div><img src="./images/image-about.jpg" alt="about" /></div>
       <div>
@@ -104,6 +107,7 @@
         <button>Read more</button>
       </div>
     </section>
+    <!-- MORE SECTION -->
     <section>
       <h2>More value from this</h2>
       <p>Product</p>
@@ -181,6 +185,7 @@
         </ul>
       </div>
     </section>
+    <!-- BUY GALLERY SECTION -->
     <section>
       <div>
         <div>
@@ -249,6 +254,7 @@
         </li>
       </ul>
     </section>
+    <!-- TRY NOW SECTION -->
     <section>
       <div>
         <p>Let’s</p>
@@ -259,6 +265,7 @@
         <img src="./images/try-now.jpg" alt="try-now" />
       </div>
     </section>
+    <!-- FOOTER -->
     <footer>
       <ul>
         <li>
