--- a/index.html
+++ b/index.html
@@ -4,29 +4,38 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700&family=Montserrat:wght@400;600;700&family=Nunito&family=Nunito+Sans:opsz@6..12&family=Poppins:wght@700&family=Raleway:wght@100;600&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.cdnfonts.com/css/sf-pro-display"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <!-- HEADER -->
-    <header>
-      <a href="#">Furniutr.</a>
-      <ul>
-        <li>
-          <a href="#">Home</a>
+    <header class="header">
+      <a class="logo" href="#">Furniutr.</a>
+      <ul class="header-nav-container">
+        <li class="header-nav-item">
+          <a class="header-nav-link" href="#">Home</a>
+        </li>
+        <li class="header-nav-item">
+          <a class="header-nav-link" href="#">About</a>
         </li>
         <li>
-          <a href="#">About</a>
+          <a class="header-nav-link" href="#">Collection</a>
         </li>
-        <li>
-          <a href="#">Collection</a>
-        </li>
-        <li>
-          <a href="#">Shop</a>
+        <li class="header-nav-item">
+          <a class="header-nav-link" href="#">Shop</a>
         </li>
       </ul>
-      <ul>
+      <ul class="header-nav-button-container">
         <li>
-          <button>
+          <button class="header-nav-button">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="20"
@@ -59,7 +68,7 @@
           </button>
         </li>
         <li>
-          <button>
+          <button class="header-nav-button">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="27"
@@ -77,20 +86,37 @@
       </ul>
     </header>
     <!-- HERO SECTION -->
-    <section>
-      <div>
-        <p>DECORATE HOME</p>
-        <h1>Feel your home with a modern design space</h1>
-        <ul>
+    <section class="hero-section container">
+      <div class="hero-section-container">
+        <p class="hero-section-text">DECORATE HOME</p>
+        <h1 class="hero-section-title">
+          Feel your home with a modern design space
+        </h1>
+        <ul class="hero-section-button-container">
           <li>
-            <button>Discover</button>
+            <button class="hero-section-button">Discover</button>
           </li>
           <li>
-            <button>Watch video</button>
+            <button class="hero-section-button--watch">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="15"
+                height="17"
+                viewBox="0 0 15 17"
+                fill="none"
+              >
+                <path
+                  d="M14.5 7.63397C15.1667 8.01888 15.1667 8.98112 14.5 9.36602L1.75 16.7272C1.08333 17.1121 0.249999 16.631 0.249999 15.8612L0.25 1.13878C0.25 0.368983 1.08333 -0.112142 1.75 0.272758L14.5 7.63397Z"
+                  fill="#282A30"
+                />
+              </svg>
+
+              Watch video
+            </button>
           </li>
         </ul>
       </div>
-      <div>
+      <div class="hero-section-pictures-container">
         <img src="./images/image-min.jpg" alt="design" />
       </div>
     </section>
